--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 
+<html>
+  <title>
+    My first github website
+  </title>
+  
+  <body>
+    <h1>This is My first gitHub page</h1>
+  </body>
+    <style>
+      body {
+        background-colour:green;
+        colour:white;
+        text-align:center;
+      }
+        
+    </style>
+    </html>
