--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
       body {
         background-colour:green;
-        colour:white;
+        colour:yellow;
         text-align:center;
       }
         
